<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/body"
            android:src="@drawable/body"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/arms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/arms"
            android:src="@drawable/arms"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/hat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/hat"
            android:src="@drawable/hat"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/eyes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/eyes"
            android:src="@drawable/eyes"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/eyebrows"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/eyebrows"
            android:src="@drawable/eyebrows"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/glasses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/glasses"
            android:src="@drawable/glasses"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ears"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ears"
            android:src="@drawable/ears"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/mouth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/mouth"
            android:src="@drawable/mouth"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/mustache"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/mustache"
            android:src="@drawable/mustache"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/nose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nose"
            android:src="@drawable/nose"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/shoes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/shoes"
            android:src="@drawable/shoes"
            android:visibility="invisible" />

    </FrameLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="322dp"
        android:layout_height="315dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="20dp"
        android:paddingTop="120dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <CheckBox
            android:id="@+id/Arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/arms"
            app:layout_column="0"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/Hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/hat"
            app:layout_column="0"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/Eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/eyes"
            app:layout_column="0"
            app:layout_row="2" />

        <CheckBox
            android:id="@+id/Eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/eyebrows"
            app:layout_column="0"
            app:layout_row="3" />

        <CheckBox
            android:id="@+id/Mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/mouth"
            app:layout_column="0"
            app:layout_row="4" />

        <CheckBox
            android:id="@+id/Mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/mustache"
            android:visibility="visible"
            app:layout_column="8"
            app:layout_row="0" />

        <CheckBox
            android:id="@+id/Glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/glasses"
            app:layout_column="8"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/Ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/ears"
            app:layout_column="8"
            app:layout_row="2" />

        <CheckBox
            android:id="@+id/Nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/nose"
            app:layout_column="8"
            app:layout_row="3" />

        <CheckBox
            android:id="@+id/Shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkClicked"
            android:text="@string/shoes"
            app:layout_column="8"
            app:layout_row="4" />
    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>